# FeatureLiftBench

./: .env.example  .gitignore  BATCH1_PLAYBOOK.md  GO_FEATURELIFTBENCH_DESIGN.md  KNOWN_LIMITATIONS.md  README.md  RUN.md  TODO.md  flb.local.toml.example  pyproject.toml  run-batch1-docker-flash.sh  run.sh  run_easy.sh  run_featurelift.sh  run_openhands.sh  run_openhands_pilot5.sh  setup.sh
.github/workflows/: eval-oracles.yml
benchmark/sanity/: README.md
benchmark/sources/: README.md
benchmark/vendor-wheels/: .gitkeep  lazy_object_proxy-1.12.0-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  rpds_py-0.20.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
docker/: Dockerfile.agent  Dockerfile.agent-go  Dockerfile.eval  Dockerfile.eval-go  build_agent_image.sh  build_eval_image.sh  build_go_agent_image.sh  build_go_eval_image.sh  eval-entrypoint.sh
docs/: ARCHITECTURE.md  BATCH1_ACCEPTANCE_2026-06-28.md  BATCH1_QUALITY_RUBRIC.md  BATCH1_REPO_SELECTION.md  BENCHMARK_ACCEPTANCE_2026-06-28.md  BENCHMARK_SPEC.md  BENCHMARK_STATUS.md  CONCEPTS.md  DIRECTORY.md  EXPANSION.md  EXPERIMENT_RESULTS.md  FEATURELIFT_AGENT_DESIGN.md  FEATURELIFT_AGENT_TODO.md  FLASH_PRO_EXPERIMENT_ANALYSIS.md  GO_PILOT_PLAYBOOK.md  GO_V2_MINI_SPEC.md  OPENHANDS_BENCHMARK_TODO.md  OPENHANDS_RUN_PITFALLS.md  OPENHANDS_SERVER_RUNBOOK.md  PAPER_OUTLINE.md  README.md  SECURITY_ACCEPTANCE.md  SECURITY_HARDENING_TODO.md  SERVER_DEPLOY.md  SETUP.md  TASK_FORMAT.md  benchmark_tasks.md  candidate_backlog.md  limitations.md
harness/scripts/: preflight.py  (+42 more)
(+708 files in other folders)
